# tintbox

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  clippy.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
crates/rcms-oracle/: build.rs  shim.c
crates/rcms-oracle/src/: lib.rs
crates/rcms/src/: adapt.rs  cam02.rs  cgats.rs  color.rs  context.rs  error.rs  fixed.rs  interp.rs  lib.rs  named.rs  pcs.rs  plugin.rs  ps.rs  sig.rs  transform.rs
crates/rcms/src/compat/: floor.rs
crates/rcms/src/curve/: interp.rs  mod.rs
crates/rcms/src/format/: alpha.rs  decode.rs  mod.rs
crates/rcms/src/gamut/: check.rs  tac.rs
crates/rcms/src/io/: cursor.rs  mod.rs  reader.rs  writer.rs
crates/rcms/src/link/: black_point.rs  intents.rs  mod.rs  profile_lut.rs
crates/rcms/src/math/: matrix.rs  mod.rs
crates/rcms/src/opt/: joincurves.rs  mod.rs  resampling.rs
crates/rcms/src/pipeline/: clut.rs  mod.rs  stage.rs
crates/rcms/src/profile/: descriptor.rs  directory.rs  header.rs  mod.rs  serialize.rs  tag.rs  virtuals.rs
crates/rcms/src/profile/types/: curve.rs  lut.rs  mlu.rs  mod.rs  mpe.rs  named.rs  trivial.rs
crates/rcms/tests/: cam02.rs  cgats.rs  gamut.rs  intent_plugin.rs  intents.rs  intents_absolute.rs  interp.rs  interp_plugin.rs  lut_tags.rs  mpe_tags.rs  named_transform.rs  opt_plugin.rs  opt_resampling.rs  parametric_curves.rs  pipeline.rs  profile_lut.rs  profile_roundtrip.rs  ps.rs  synthetic_profiles.rs  tone_curves.rs  transform.rs
crates/tintbox/: Cargo.toml  LICENSE
crates/tintbox-oracle/: Cargo.toml  build.rs  shim.c
crates/tintbox-oracle/src/: lib.rs
crates/tintbox/benches/: transform.rs
crates/tintbox/examples/: profile_transform.rs
crates/tintbox/fuzz/: Cargo.toml
crates/tintbox/src/: adapt.rs  cam02.rs  cgats.rs  color.rs  error.rs  fixed.rs  interp.rs  lib.rs  pcs.rs  plugin.rs  ps.rs  sig.rs  simd.rs  transform.rs
crates/tintbox/src/compat/: floor.rs  mod.rs
crates/tintbox/src/curve/: mod.rs  parametric.rs
crates/tintbox/src/format/: decode.rs  float.rs  formatters.rs  mod.rs
crates/tintbox/src/gamut/: check.rs  mod.rs  sm.rs
crates/tintbox/src/io/: cursor.rs  file.rs  mod.rs  reader.rs  writer.rs
crates/tintbox/src/link/: black_point.rs  intents.rs
crates/tintbox/src/math/: half.rs  matrix.rs  md5.rs  mod.rs  whitepoint.rs
crates/tintbox/src/opt/: batched.rs  lossless_matshaper.rs  matshaper.rs  mod.rs  resampling.rs
crates/tintbox/src/pipeline/: clut.rs  mod.rs  stage.rs
crates/tintbox/src/profile/: descriptor.rs  directory.rs  header.rs  mod.rs  serialize.rs  virtuals.rs
crates/tintbox/src/profile/types/: curve.rs  lut.rs  mlu.rs  mod.rs  mpe.rs  named.rs  structs.rs  trivial.rs
crates/tintbox/tests/: bpc_no_b2a_roundtrip.rs  cam02.rs  cgats.rs  cube.rs  gamut.rs  intent_plugin.rs  intents.rs  intents_absolute.rs  interp.rs  interp_plugin.rs  lut_tags.rs  mpe_tags.rs  named_transform.rs  opt_batched.rs  opt_lossless_matshaper.rs  opt_matshaper.rs  opt_plugin.rs  opt_resampling.rs  parametric_curves.rs  pipeline.rs  profile_lut.rs  profile_roundtrip.rs  ps.rs  synthetic_profiles.rs  thread_safety.rs  tone_curves.rs  transform.rs
