[package]
name = "tintbox"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A pure-Rust, full-parity reimplementation of Little CMS (lcms2) — the ICC color-management engine. Memory-safe, no C, verified bit-identical to lcms2 by differential testing."
repository = "https://github.com/RayVR/tintbox"
readme = "../../README.md"
keywords = ["color", "icc", "cms", "color-management", "lcms"]
categories = ["graphics", "multimedia::images"]
# The integration tests depend on the test-only `tintbox-oracle` (a path
# dev-dependency that cargo strips on publish), so they can't compile from a
# published package. Exclude them — consumers never build a dep's tests anyway.
exclude = ["tests/**"]

[features]
default = ["std"]
std = []
file-io = ["std"]
native-floor = []
# Optional SIMD acceleration via the `wide` crate (safe API, stable, wasm-OK).
# When OFF (the default) the scalar kernels run and behavior is byte-for-byte as
# today. Every SIMD kernel is bit-identical to its scalar counterpart and to
# lcms2 `cmsFLAGS_NOOPTIMIZE`, verified by unit tests + the differential oracle.
simd = ["dep:wide"]

[dev-dependencies]
criterion = "0.8.2"
tintbox-oracle = { path = "../tintbox-oracle" }

[[bench]]
name = "transform"
harness = false

[dependencies]
wide = { version = "1.5.0", optional = true }
